front-end/front-end.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front-end
spec:
  containers:
  - name: front-end
    image: front-end:v1
    ports:
    - containerPort: 443  # Update the container port to match the port your application is listening on
