front-end/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
  - protocol: TCP
    port: 443       # External port
    targetPort: 443 # Pod's internal port
  type: NodePort
